--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,12 +20,12 @@
     "@typescript-eslint/ban-ts-comment": "off",
     "react/no-unknown-property": "off",
     "react/react-in-jsx-scope": "off",
-    "react/prop-types": "off"
-  },
-  "prettier/prettier": [
-    "error",
-    {
-      "endOfLine": "auto"
-    }
-  ]
+    "react/prop-types": "off",
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ]
+  }
 }
